nullaway_error_d4aefb13-c261-48ae-8090-e132400310c9.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/registry/RemoteRegionRegistry.java:161: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.eurekaHttpClient = newEurekaHttpClient;
                              ^
